# only-brain

./: .gitignore  Cargo.toml  README.md
examples/: dump_load.rs  neural_network.rs  perceptron.rs
examples/example/: main.rs
src/: activation_functions.rs  bvector.rs  io.rs  layer.rs  lib.rs  math_utils.rs  neural_network.rs  perceptron.rs
